29Sep02=======================================================================
1. Added LRU caching to DXUsers and Prefix.
2. make Timer::handler only search its chain once a second seeing as that
is the minimum granularity available.
3. add some separation between cfg file making, data generation and mrtg 
running. See /spider/cmd/mrtg.pl for some instructions...
4. Added data in and out to the MRTG stats, you need to do an indexmaker
to get them onto the index page, I have also added some colour to the
legend to make what is being displayed a bit more obvious.

See http://gb7djk.dxcluster.org/mrtg/stats.html for an example of the
default screen.

28Sep02=======================================================================
1. Put some transparent caching into Prefix.pm to see if this has a 
performance impact.
2. Fix doing a new log open for every log file write.
26Sep02=======================================================================
1. added WWV and WCY to the Mrtg stats. Don't forget to do an indexmaker!
25Sep02=======================================================================
1. added mrtg stuff to the system as a template. In order to use this you
must install mrtg onto your system and copy all the mrtg files (or at least
all the images) to new directory /spider/html/mrtg. The system generates the
config file for you as part of its workings. To get it to update add a line
to your spider crontab like: 

00,05,10,15,20,25,30,35,40,45,50,55 * * * * run_cmd('mrtg all')

You will also need to do an indexmaker once in the html directory. I put the 
index page into /spider/html/mrtg/stats.html YMMV. I do:

indexmaker --output stats.html --columns=1 --title "MRTG statistics for 
GB7DJK" ../../mrtg/mrtg.cfg

But all on one line.
2. I have made a technical change to the way ax25 connects outward on unix 
boxes are done. I currently have no way of testing this. I think it still 
works.